--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,22 @@
 body {
-    white-space: pre;
+    white-space: pre-wrap;
     margin: 0;
     padding: 0;
+    overflow-wrap: anywhere;
+    @extend .no-scrollbar;
+}
+
+* {
+  @extend .no-scrollbar;
+}
+
+ /* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
