--- a/web/style.scss
+++ b/web/style.scss
@@ -8,6 +8,8 @@ body {
 
 * {
   @extend .no-scrollbar;
+  // TODO make configurable
+  scroll-behavior: smooth;
 }
 
  /* Hide scrollbar for Chrome, Safari and Opera */
@@ -32,3 +34,9 @@ body {
 .cursor-line{
   box-shadow: 2px 0 0 rgb(252, 165, 165) inset;
 }
+
+@font-face {
+  font-family: 'Noto';
+  src: url('fonts/NotoSansMono-VariableFont_wdth,wght.ttf');
+}
+
