--- a/web/style.scss
+++ b/web/style.scss
@@ -35,6 +35,10 @@ body {
   box-shadow: 2px 0 0 rgb(252, 165, 165) inset;
 }
 
+.unhidden{
+    display: unset !important;
+}
+
 @font-face {
   font-family: 'Noto';
   src: url('fonts/NotoSansMono-VariableFont_wdth,wght.ttf');
